# gtrack

./: .gitattributes  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: CNAME  about.md  api.md  getting-started.md  index.md
docs/demos/: index.md
examples/: Makefile  continental_rotation.py  download_osf_folder.py  interpolate_to_icosahedral.py  interpolate_to_mesh.py  rotate_back.py  seafloor_age_simple.py  seafloor_age_stepwise.py
examples/stale/: 00_basic.py  00_hpc.py  basic_usage.py  create_website_visualizations.py  generate_seafloor_agegrids.py  hpc_simulation_example.py  rotate_continental_points.py  visualize_boundaries.py
gtrack/: __init__.py  boundaries.py  config.py  geometry.py  hpc_integration.py  logging.py  mesh.py  point_rotation.py  polygon_filter.py
tests/: __init__.py  test_checkpoint_roundtrip.py  test_core.py  test_geometry.py  test_point_rotation.py  test_regression.py
tests/data/: ref_age_180.npz  ref_age_190.npz  ref_rotation_200ma.npz
tractec/: __init__.py  boundaries.py  config.py  continents.py  geometry.py  hpc_integration.py  initial_conditions.py  io_formats.py  logging.py  mesh.py  model.py  mor_seeds.py  plate_operations.py  point_rotation.py  polygon_filter.py  ridges.py  spatial.py  subduction.py
