[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tractec"
version = "0.1.0"
description = "High-performance seafloor age generation from plate tectonic reconstructions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Krister S. Karlsen"},
    {name = "S. Ghelichkhani"},
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
performance = [
    "numba>=0.56",
    "h5py>=3.0",
]
visualization = [
    "matplotlib>=3.5",
    "cartopy>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.urls]
Homepage = "https://github.com/sghelichkhani/tractec"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
