[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tractec"
version = "0.2.0"
description = "High-performance seafloor age tracking and point rotation using plate tectonic reconstructions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Krister S. Karlsen"},
    {name = "S. Ghelichkhani"},
]
keywords = ["plate tectonics", "seafloor age", "geodynamics", "pygplates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "stripy>=2.0",
    "pygplates",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.5",
    "cartopy>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]
all = [
    "tractec[visualization,dev]",
]

[project.urls]
Homepage = "https://github.com/sghelichkhani/tractec"
Documentation = "https://github.com/sghelichkhani/tractec#readme"
Repository = "https://github.com/sghelichkhani/tractec"

[tool.setuptools.packages.find]
where = ["."]
include = ["tractec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
