[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtrack"
version = "0.2.0"
description = "GPlates-based Tracking of Lithosphere and Kinematics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "S. Ghelichkhani"},
]
keywords = ["plate tectonics", "seafloor age", "geodynamics", "pygplates", "lithosphere", "kinematics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "stripy>=2.0",
    "pygplates",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.5",
    "cartopy>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]
demos = [
    "jupytext>=1.15",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
    "matplotlib>=3.5",
    "cartopy>=0.21",
]
all = [
    "gtrack[visualization,dev,docs,demos]",
]

[project.urls]
Homepage = "https://github.com/sghelichkhani/gtrack"
Documentation = "https://gtrack.gadopt.org"
Repository = "https://github.com/sghelichkhani/gtrack"

[tool.setuptools.packages.find]
where = ["."]
include = ["gtrack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
